[package]
name = "apimg-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
hyper = "1.0"
